--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.26.0",
     "element-ui": "^1.4.8",
     "jquery": "^3.2.1",
+    "normalize.css": "^7.0.0",
     "vee-validate": "^2.0.0-rc.7",
     "vue": "^2.3.3",
     "vue-progressbar": "^0.7.2",
